// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registerCharacter should update correctly on first connection 1`] = `
Array [
  Object {
    "Update": Object {
      "ConditionExpression": "connections = :oldConnections",
      "ExpressionAttributeValues": Object {
        ":newConnections": Object {
          "L": Array [
            Object {
              "S": "TestConnection",
            },
          ],
        },
        ":oldConnections": Object {
          "L": Array [],
        },
      },
      "Key": Object {
        "ConnectionId": Object {
          "S": "CHARACTER#ABC",
        },
        "DataCategory": Object {
          "S": "Meta::Character",
        },
      },
      "TableName": "Connections",
      "UpdateExpression": "SET connections = :newConnections",
    },
  },
  Object {
    "Put": Object {
      "Item": Object {
        "ConnectionId": Object {
          "S": "CONNECTION#TestConnection",
        },
        "DataCategory": Object {
          "S": "CHARACTER#ABC",
        },
      },
      "TableName": "Connections",
    },
  },
  Object {
    "Update": Object {
      "ConditionExpression": "activeCharacters = :oldActiveCharacters",
      "ExpressionAttributeValues": Object {
        ":newActiveCharacters": Object {
          "L": Array [
            Object {
              "M": Object {
                "ConnectionIds": Object {
                  "L": Array [
                    Object {
                      "S": "QRS",
                    },
                  ],
                },
                "EphemeraId": Object {
                  "S": "CHARACTER#BCD",
                },
                "Name": Object {
                  "S": "TestToo",
                },
              },
            },
            Object {
              "M": Object {
                "Color": Object {
                  "S": "purple",
                },
                "ConnectionIds": Object {
                  "L": Array [
                    Object {
                      "S": "TestConnection",
                    },
                  ],
                },
                "EphemeraId": Object {
                  "S": "CHARACTER#ABC",
                },
                "Name": Object {
                  "S": "Tess",
                },
              },
            },
          ],
        },
        ":oldActiveCharacters": Object {
          "L": Array [
            Object {
              "M": Object {
                "ConnectionIds": Object {
                  "L": Array [
                    Object {
                      "S": "QRS",
                    },
                  ],
                },
                "EphemeraId": Object {
                  "S": "CHARACTER#BCD",
                },
                "Name": Object {
                  "S": "TestToo",
                },
              },
            },
          ],
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Room",
        },
        "EphemeraId": Object {
          "S": "ROOM#TestABC",
        },
      },
      "TableName": "Ephemera",
      "UpdateExpression": "SET activeCharacters = :newActiveCharacters",
    },
  },
]
`;

exports[`registerCharacter should update correctly on subsequent connections 1`] = `
Array [
  Object {
    "Update": Object {
      "ConditionExpression": "connections = :oldConnections",
      "ExpressionAttributeValues": Object {
        ":newConnections": Object {
          "L": Array [
            Object {
              "S": "previous",
            },
            Object {
              "S": "TestConnection",
            },
          ],
        },
        ":oldConnections": Object {
          "L": Array [
            Object {
              "S": "previous",
            },
          ],
        },
      },
      "Key": Object {
        "ConnectionId": Object {
          "S": "CHARACTER#ABC",
        },
        "DataCategory": Object {
          "S": "Meta::Character",
        },
      },
      "TableName": "Connections",
      "UpdateExpression": "SET connections = :newConnections",
    },
  },
  Object {
    "Put": Object {
      "Item": Object {
        "ConnectionId": Object {
          "S": "CONNECTION#TestConnection",
        },
        "DataCategory": Object {
          "S": "CHARACTER#ABC",
        },
      },
      "TableName": "Connections",
    },
  },
  Object {
    "Update": Object {
      "ConditionExpression": "activeCharacters = :oldActiveCharacters",
      "ExpressionAttributeValues": Object {
        ":newActiveCharacters": Object {
          "L": Array [
            Object {
              "M": Object {
                "Color": Object {
                  "S": "purple",
                },
                "ConnectionIds": Object {
                  "L": Array [
                    Object {
                      "S": "previous",
                    },
                    Object {
                      "S": "TestConnection",
                    },
                  ],
                },
                "EphemeraId": Object {
                  "S": "CHARACTER#ABC",
                },
                "Name": Object {
                  "S": "Tess",
                },
              },
            },
          ],
        },
        ":oldActiveCharacters": Object {
          "L": Array [
            Object {
              "M": Object {
                "ConnectionIds": Object {
                  "L": Array [
                    Object {
                      "S": "previous",
                    },
                  ],
                },
                "EphemeraId": Object {
                  "S": "CHARACTER#ABC",
                },
                "Name": Object {
                  "S": "Tess",
                },
              },
            },
          ],
        },
      },
      "Key": Object {
        "DataCategory": Object {
          "S": "Meta::Room",
        },
        "EphemeraId": Object {
          "S": "ROOM#TestABC",
        },
      },
      "TableName": "Ephemera",
      "UpdateExpression": "SET activeCharacters = :newActiveCharacters",
    },
  },
]
`;
